--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -16,12 +16,20 @@ button:active {
     outline: none !important;
 }
 
+
+
 tr.spaceTop>td {
     padding-top: 24px;
 }
 
 input::-webkit-calendar-picker-indicator {
     display: none !important;
+}
+
+input:hover,
+input:focus,
+input:active {
+    outline: none !important;
 }
 
 a {
@@ -562,9 +570,6 @@ body {
     background: #045547;
     box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
     border-radius: 8px;
-    -webkit-appearance: button;
-    -moz-appearance: button;
-    appearance: button;
     text-decoration: none;
     text-align: center;
     margin-top: 20px;
@@ -936,4 +941,8 @@ body {
     font-weight: bold;
     text-decoration: none;
     color: #066453;
+}
+
+.btn-group {
+    width: 158px !important;
 }
