--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -126,10 +126,17 @@
                         Download Metadata </button>
                 </form>
             </div>
-            <div style="margin: 10px 15px 0px 0px;">
+            <div id="matrixFormButton" style="margin: 10px 15px 0px 0px;">
+                <form id="downloadMatrix" class="download" action="{{ url_for('tasks.download_matrix')}}" method="post">
+                </form>
                 <div class="mediumButton" style="display:inline-block;"><a href="#DownloadMatrixForm">Download
                         Matrix</a>
                 </div>
+            </div>
+            <div id="matrixDownloadButton" style="margin: 10px 15px 0px 0px;">
+                <button class="mediumButton" name="download_matrix" type="submit" style="display:inline-block;"
+                    form="downloadMatrix">
+                    Download Matrix </button>
             </div>
         </div>
 
@@ -146,18 +153,16 @@
                 <div class="filterContent row justify-content-center">
                     <div class="filterContainer justify-content-center">
                         <div class="row justify-content-center">
-                            <form id="downloadMatrix" class="download" action="{{ url_for('tasks.download_matrix')}}"
-                                method="post"></form>
                             <label form="downloadMatrix" class="mediumauto16" for="name">Email
                                 address for receiving
                                 file: </label>
                         </div>
                         <div class="row justify-content-center" style="margin-bottom: 40px">
-                            <input form="downloadMatrix" class="form-control" type="text" name="address" id="address"
-                                placeholder="Email address" required>
+                            <input id="emailInput" form="downloadMatrix" class="form-control" type="text" name="address"
+                                id="address" placeholder="Email address" required>
                         </div>
                         <div class="row justify-content-center">
-                            <button class="download mediumButton" name="download_matrix" type="submit"
+                            <button id="dowloadSubmitButton" class="mediumButton" name="download_matrix" type="submit"
                                 style="display:inline-block;" form="downloadMatrix">
                                 Download Matrix </button>
                         </div>
@@ -304,8 +309,9 @@
                             console.log("Download complete!!Remove downloadID cookie!")
                         );
                     }
-                    HideForm();
+
                     ShowDownloadMessage();
+
                     //console.log(
                     //    "File still downloading...",
                     //    new Date().getTime()
@@ -314,8 +320,15 @@
             }
         );
 
+        $('#downloadMatrix').submit(
+            function (event) {
+                HideForm()
+            })
+
 
         $("#globalsearch").hide();
+
+        $("#matrixDownloadButton").hide();
 
         $("#btnAdvance").click(function () {
             $("#globalsearch").toggle();
@@ -441,12 +454,14 @@
                         .click(function () {
                             input.val('');
                             $searchButton.click();
+                            //var perviousEntries = Number(entries);
                         })
             }
 
         });
 
         oTable = $('#empTable').DataTable();
+
         $('#btnSearch').click(function () {
             //Apply search for Employee Name // DataTable column index 0
             oTable.columns(0).search($('#txt_id').val().trim());
@@ -461,6 +476,7 @@
             //hit search on server
             oTable.draw();
         });
+
         $('#btnClear').click(function () {
 
             oTable.columns().search('').draw();
@@ -521,18 +537,34 @@
         //console.log(startTime);
     });
 
+    var getEntries = function () {
+        var entrieString = $('#empTable_info').text();
+        var entries = entrieString.split('of ').pop().split(' entries')[0];
+        entries = entries.replaceAll(',', '');
+
+        if (Number(entries) < 2000) {
+            $("#matrixFormButton").hide();
+            $("#matrixDownloadButton").show();
+            $('#emailInput').removeAttr('required');
+        } else {
+            $("#matrixFormButton").show();
+            $("#matrixDownloadButton").hide();
+            $('#emailInput').attr('required', 'required');
+        }
+
+        console.log(Number(entries))
+
+        return Number(entries);
+    }
+
     $('#empTable').on('draw.dt', function () {
         console.log("Page finish change");
         //console.log($.now());
         endTime = new Date();
         diff = (endTime - startTime);
         console.log(diff);
+        getEntries();
     });
-
-    $('.buttonID').click(
-        do ();
-        do_more();
-    )
 
 </script>
 
