--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -245,6 +245,11 @@
             </thead>
         </table>
 
+        <div class="row justify-content-center" style="padding-top: 30px">
+            <div id="chart" class="chart"></div>
+        </div>
+        
+
         <div class="jumbotron" hidden>
             <h4>Please choose any of the option below for data manipulation.</h4>
 
@@ -638,5 +643,15 @@
     });
 
 </script>
+
+
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script type="text/javascript">
+  var graphs = {{ graphJSON | safe }};
+
+  Plotly.plot('chart', graphs, {});
+
+</script>
+
 
 {% endblock %}
