download meta notification

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -148,7 +148,7 @@
 
             <div style="margin: 10px 15px 0px 0px;">
                 <form class="download" action="{{ url_for('tasks.download_meta')}}" method="post">
-                    <button class="mediumButton" name="download_meta" type="submit" style="display:inline-block;">
+                    <button class="mediumButton download" name="download_meta" type="submit" style="display:inline-block;">
                         Download Metadata </button>
                 </form>
             </div>
