--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -118,6 +118,14 @@
             <div><input type="button" class="lightButton" style="display:inline-block; margin-left: 15px;"
                     value="Clear Filter" id="btnClear" /></div>
         </div>
+        <div style="margin-top: 10px;">
+            <button class="lightButton" name="show_plot"
+                    style="display:inline-block ; margin-right: 15px;"
+                    title='Bar Charts of Cell type, Severity, Days from onset and Outcome'
+                    onclick="window.location.href='{{ url_for( 'tasks.show_search') }}';">
+                    Show plots
+            </button>
+        </div>
 
         <div class="row justify-content-end" style="margin-top: 24px;">
             <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
@@ -581,11 +589,11 @@
     $('#return_home').click(function () {
         getURL();
         var url = window.location.href;
-        var arr = url.split('?');
+        var arr = url.split('return render_template('tasks/table_view.html',/table_view?');
         arr.pop();
         console.log(arr[0])
         window.location.href = arr[0];
-        { { url_for('frontend.index') } }
+
     });
 
     $('#scfbutton').click(function () {
