--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -118,18 +118,18 @@
             <div><input type="button" class="lightButton" style="display:inline-block; margin-left: 15px;"
                     value="Clear Filter" id="btnClear" /></div>
         </div>
-        <div style="margin-top: 10px;">
-            <button class="lightButton" name="show_plot"
-                    style="display:inline-block ; margin-right: 15px;"
-                    title='Bar Charts of Cell type, Severity, Days from onset and Outcome'
-                    onclick="window.location.href='{{ url_for( 'tasks.show_search') }}';">
-                    Show plots
-            </button>
-        </div>
+
 
         <div class="row justify-content-end" style="margin-top: 24px;">
             <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
             </form>
+            <div style="margin-top: 10px;">
+                <button class="lightButton" name="show_plot" style="display:inline-block ; margin-right: 15px;"
+                    title='Bar Charts of Cell type, Severity, Days from onset and Outcome'
+                    onclick="window.location.href='{{ url_for( 'tasks.show_search') }}';">
+                    Show plots
+                </button>
+            </div>
             <div style="margin-top: 10px;"><button id="scfbutton" class="lightButton" name="show_scfeature"
                     style="display:inline-block ; margin-right: 15px;" form="scfform"
                     title='Select more than 2 items in each of Sample ID + Cell Type OR Dataset + Cell Type & Search before clicking this button (Sample IDs should come from more than 1 dataset)'>
@@ -156,7 +156,8 @@
 
             <div style="margin: 10px 15px 0px 0px;">
                 <form class="download" action="{{ url_for('tasks.download_meta')}}" method="post">
-                    <button class="mediumButton download" name="download_meta" type="submit" style="display:inline-block;">
+                    <button class="mediumButton download" name="download_meta" type="submit"
+                        style="display:inline-block;">
                         Download Metadata </button>
                 </form>
             </div>
