small cleanup of code for app

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -1,6 +1,6 @@
 {% from "macros/_form.html" import render_form %}
 
-{% set page_title = 'My Tasks' %}
+{% set page_title = 'Explore' %}
 
 {% extends 'layouts/base.html' %}
 
