--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -1,4 +1,3 @@
-
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 <div class="d-flex flex-column justify-content-center" id="banner">
@@ -19,7 +18,7 @@
     </div>
     <div id="projectDisp" class="d-flex justify-content-center">
         <div class="typed-strings">
-            <h5><strong>Continuously Updated  |  Standardized  |  Download-ready  |  Open Datasets</strong></h5>
+            <h5><strong>Continuously Updated | Standardized | Download-ready | Open Datasets</strong></h5>
         </div>
         <span class="typed"></span>
     </div>
@@ -28,24 +27,34 @@
 <div id="dashrow" class="d-flex justify-content-center">
     <div id="dashboard" class="d-flex justify-content-between container-fluid">
         <div class="dash-item">
-            <div class="item1"><img src="{{url_for('static', filename='Group.png')}}" width="64" height="64"/></div>
-            <div class="item2"><h2 id="animatedCellCount">50000000</h2></div>
+            <div class="item1"><img src="{{url_for('static', filename='Group.png')}}" width="64" height="64" /></div>
+            <div class="item2">
+                <h2 id="animatedCellCount">{{counting[4].count}}</h2>
+            </div>
             <div class="item3">Cells</div>
         </div>
         <div class="dash-item">
-            <div class="item1"><img src="{{url_for('static', filename='Group 38.png')}}" width="76" height="53"/></div>
-            <div class="item2"><h2 id="animatedDonorCount">974</h2></div>
+            <div class="item1"><img src="{{url_for('static', filename='Group 38.png')}}" width="76" height="53" /></div>
+            <div class="item2">
+                <h2 id="animatedDonorCount">{{counting[2].count}}</h2>
+            </div>
             <div class="item3">Donors</div>
         </div>
         <div class="dash-item">
-            <div class="item1"><img src="{{url_for('static', filename='Group 36.png')}}" width="64" height="64"/></div>
-            <div class="item2"><h2 id="animatedDatasetCount">19</h2></div>
+            <div class="item1"><img src="{{url_for('static', filename='Group 36.png')}}" width="64" height="64" /></div>
+            <div class="item2">
+                <h2 id="animatedDatasetCount">{{counting[0].count}}</h2>
+            </div>
             <div class="item3">Datasets</div>
         </div>
         <div class="dash-item">
-            <div class="item1"><img src="{{url_for('static', filename='Group 37.png')}}" width="64" height="64"/></div>
-            <div class="item2"><h2>May, 2022</h2></div>
+            <div class="item1"><img src="{{url_for('static', filename='Group 37.png')}}" width="64" height="64" /></div>
+            <div class="item2">
+                <h2>May, 2022</h2>
+            </div>
             <div class="item3">Data Date Processed</div>
+        </div>
+        <div>
         </div>
     </div>
 
@@ -53,36 +62,36 @@
 
 
 <script>
-        function animateValue(obj, start, end, duration) {
-          let startTimestamp = null;
-          const step = (timestamp) => {
+    function animateValue(obj, start, end, duration) {
+        let startTimestamp = null;
+        const step = (timestamp) => {
             if (!startTimestamp) startTimestamp = timestamp;
             const progress = Math.min((timestamp - startTimestamp) / duration, 1);
             obj.innerHTML = Math.floor(progress * (end - start) + start);
             if (progress < 1) {
-              window.requestAnimationFrame(step);
+                window.requestAnimationFrame(step);
             }
-          };
-          window.requestAnimationFrame(step);
-        }
+        };
+        window.requestAnimationFrame(step);
+    }
 
-        const obj = document.getElementById("animatedCellCount");
-        animateValue(obj, 0, 5000000, 5000);
+    const obj = document.getElementById("animatedCellCount");
+    animateValue(obj, 0, 5000000, 5000);
 
-        const obj2 = document.getElementById("animatedDonorCount");
-        animateValue(obj2, 0, 974, 5000);
+    const obj2 = document.getElementById("animatedDonorCount");
+    animateValue(obj2, 0, 974, 5000);
 
-        const obj3 = document.getElementById("animatedDatasetCount");
-        animateValue(obj3, 0,21, 5000);
+    const obj3 = document.getElementById("animatedDatasetCount");
+    animateValue(obj3, 0, 21, 5000);
 
-     var typed = new Typed('.typed', {
-       typeSpeed: 50,
-       stringsElement: '.typed-strings'
-     });
+    var typed = new Typed('.typed', {
+        typeSpeed: 50,
+        stringsElement: '.typed-strings'
+    });
 
-     var typed2 = new Typed('.typed2', {
-       typeSpeed: 50,
-       startDelay: 3000,
-       stringsElement: '.typed-strings2'
-     });
+    var typed2 = new Typed('.typed2', {
+        typeSpeed: 50,
+        startDelay: 3000,
+        stringsElement: '.typed-strings2'
+    });
 </script>
