--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -120,8 +120,9 @@
         </div>
 
 
-        <div class="row justify-content-end" style="margin-top: 24px;">
-            <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
+        <div class="row justify-content-end" style="margin-top: 24px -15px 0px 0px;">
+            <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block"
+                target="_blank">
             </form>
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" style="display:inline-block ; margin-right: 15px;"
@@ -138,7 +139,8 @@
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" type="submit" style="display:inline-block;"
                     onclick="window.location.href='{{ url_for( 'tasks.show_plot') }}';"
-                    title='Select 1 Cell Type & Search before clicking this button'> Show UMAP Plot </button>
+                    title='Select 1 Cell Type & Search before clicking this button'> Show UMAP Plot
+                </button>
             </div>
         </div>
 
@@ -593,7 +595,7 @@
         arr.pop();
         console.log(arr[0]);
         window.location.href = arr[0];
-        {{ url_for( 'frontend.index') }}
+        { { url_for('frontend.index') } }
     });
 
     $('#scfbutton').click(function () {
