--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<div id="dashrow" class="d-flex justify-content-center">
+<div id="dashrow" class="justify-content-center d-none d-sm-block">
     <div id="dashboard" class="d-flex justify-content-between container-fluid">
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group.png')}}" width="64" height="64" /></div>
@@ -53,8 +53,6 @@
                 <h2>May, 2022</h2>
             </div>
             <div class="item3">Data Date Processed</div>
-        </div>
-        <div>
         </div>
     </div>
 
