--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -27,7 +27,6 @@
         <div class="row justify-content-start" style="margin: 24px -15px 0px 0px;">
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_sampleid" class="multibox" multiple="multiple" name="name_tbv_sample" form="scfform">
-                    <option label=" "></option>
                     {% for val in fsampleid %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -35,7 +34,6 @@
             </div>
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_age" class="multibox" multiple="multiple" name="name_tbv_age" form="scfform">
-                    <option label=" "></option>
                     {% for val in fage %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -45,7 +43,6 @@
                 <!-- Change by junyi 2022 0620-->
                 <select id="opt_prediction" class="multibox" multiple="multiple" name="name_tbv_celltype"
                     form="scfform">
-                    <option label=" "></option>
                     {% for val in fprediction %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -53,7 +50,6 @@
             </div>
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_donor" class="multibox" multiple="multiple" name="name_tbv_donor" form="scfform">
-                    <option label=" "></option>
                     {% for val in fdonor %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -61,7 +57,6 @@
             </div>
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_status" class="multibox" multiple="multiple" name="name_tbv_status" form="scfform">
-                    <option label=" "></option>
                     {% for val in fstatus %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -69,7 +64,6 @@
             </div>
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_dataset" class="multibox" multiple="multiple" name="name_tbv_dataset" form="scfform">
-                    <option label=" "></option>
                     {% for val in fdataset %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -77,7 +71,6 @@
             </div>
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_onset" class="multibox" multiple="multiple" name="name_tbv_onset" form="scfform">
-                    <option label=" "></option>
                     {% for val in fonset %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -85,7 +78,6 @@
             </div>
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_outcome" class="multibox" multiple="multiple" name="name_tbv_outcome" form="scfform">
-                    <option label=" "></option>
                     {% for val in foutcome %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -94,7 +86,6 @@
 
             <div style="margin: 10px 15px 0px 0px">
                 <select id="opt_gender" class="multibox" multiple="multiple" name="name_tbv_gender" form="scfform">
-                    <option label=" "></option>
                     {% for val in fgender %}
                     <option value="{{val}}">{{val}}</option>
                     {% endfor %}
@@ -146,7 +137,7 @@
         </div>
 
         <div class="row justify-content-end" style="margin: 14px -15px 30px 0px;">
-            <div style="margin: 10px 15px 0px 0px;">
+            <div style="margin: 10px 15px 0px 0px;" hidden>
                 <button class="mediumButton" id="return_home" type="submit" style="display:inline-block ;"
                     onclick="window.location.href='{{ url_for( 'frontend.index') }}';"> Return to Home </button>
             </div>
