--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -112,13 +112,12 @@
 
 
         <div class="row justify-content-end" style="margin: 24px -15px 0px 0px;">
-            <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block"
-                target="_blank">
+            <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
             </form>
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" style="display:inline-block ; margin-right: 15px;"
                     title='Bar Charts of Cell type, Severity, Days from onset and Outcome'
-                    onclick="window.open('{{ url_for( 'tasks.show_search') }}', '_blank');">
+                    onclick="window.location.href='{{ url_for( 'tasks.show_search') }}';">
                     Show plots
                 </button>
             </div>
@@ -130,7 +129,7 @@
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" type="submit"
                     style="display:inline-block; margin-right: 15px;"
-                    onclick="window.open('{{ url_for( 'tasks.show_plot') }}', '_blank');"
+                    onclick="window.location.href='{{ url_for( 'tasks.show_plot') }}';"
                     title='Select 1 Cell Type & Search before clicking this button'> Show UMAP Plot
                 </button>
             </div>
