--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -2,7 +2,7 @@
 <div class="collapse navbar-collapse" id="navbarResponsive">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('frontend.index') }}" style="color: #045547 !important">Home</a>
+      <a class="nav-link" href="{{ url_for('frontend.index') }}">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore</a>
