--- a/flaskstarter/templates/frontend/contact_us.html
+++ b/flaskstarter/templates/frontend/contact_us.html
@@ -30,7 +30,7 @@
       <div class="contact-item">
         <h2>EMAIL</h2>
         <hr>
-        <p>info@d24h.hk</p>
+        <p>covidscope@gmail.com</p>
       </div>
     </div>
     <div class="contact-row">
