--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -2,7 +2,7 @@
 
 <div class="d-flex flex-column justify-content-center" id="banner">
     <div id="projectName" class="d-flex justify-content-center">
-        <h4>5.0 MILLION <span>SINGLE CELL</span></h4>
+        <h4>COVID<span>SCOPE</span></h4>
     </div>
     <div id="projectAim0" class="d-flex justify-content-center">
         <div class="typed-strings">
@@ -50,7 +50,7 @@
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 37.png')}}" width="64" height="64" /></div>
             <div class="item2">
-                <h2>May, 2022</h2>
+                <h2>Sep, 2022</h2>
             </div>
             <div class="item3">Data Date Processed</div>
         </div>
