--- a/flaskstarter/templates/layouts/footer.html
+++ b/flaskstarter/templates/layouts/footer.html
@@ -19,7 +19,8 @@
                 </div>
                 <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
                     <img src="{{url_for('static', filename='mail icon.svg')}}" />
-                    <div class="regularauto16" style="margin-left: 8px; color:hsla(176, 39%, 15%, 1);">info@d24h.hk
+                    <div class="regularauto16" style="margin-left: 8px; color:hsla(176, 39%, 15%, 1);">
+                        covidscope@gmail.com
                     </div>
                 </div>
                 <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
