--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -27,7 +27,7 @@
       <div class="col-4" style="padding-top: 50px;">
         <div class="boldauto64">Cell Type Distribution</div>
         <div class="regularH160">We have gathered data of multivarious cell types, including CD4 T, CD14 Mono, Nk, etc.
-          You may explore more and generate scFeature/ UMAP graph on our insight page.</div>
+          You may explore more and generate scFeature/ UMAP graph on our Explore page.</div>
         <div class="d-flex">
           <a class="exploreButton" href="{{ url_for('tasks.table_view') }}">
             <div class="mediumauto22">Explore dataset</div>
@@ -89,9 +89,9 @@
 <div class="section01">
 
   <div class="container flex-column">
-    <div class="intro-h">What is the D²4H Single-cell Data Share?</div>
+    <div class="intro-h">What is Covidscope?</div>
     <div class="intro-c">
-      The D²4H Single-cell Data Share stores and provides over 3.2 million
+      Covidscope stores and provides over 4.9 million
       single-cell data by 21 published single-cell sequencing datasets. Anyone
       can explore the insights from our analysis and download the data provided
       here for further analysis.
