--- a/flaskstarter/templates/tasks/show_plot.html
+++ b/flaskstarter/templates/tasks/show_plot.html
@@ -52,7 +52,7 @@
       <button class="mediumButton" name="jump_home" type="submit"> Go to homepage</button>
     </form>
     <form action="{{ url_for('tasks.download_matrix')}}" method="post" style="display:inline-block; padding-left: 30px">
-      <button class="mediumButton" name="download_matrix" type="submit"> Download matrix </button>
+      <button class="mediumButton" name="download_matrix" type="submit" hidden> Download matrix </button>
     </form>
   </div>
 
