--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -10,11 +10,11 @@
     </div>
     <div class="row">
       <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
-        <div class="row tutorialTitle boldH160">How to...</div>
+        <div class="row tutorialTitle boldH160">How to use Covidscope?</div>
         <div class="row container collapsible-text"
           style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
           <div class="row tutorialContent regularauto16">
-            If you want to ....
+            Find the tutorial in following link ....
           </div>
           <div class="row tutorialLink">
             <a
