--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -44,7 +44,7 @@
 <div class="section02" style="padding-bottom: 0px;">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="boldauto64" style="padding-bottom: 40px;">scRNA-seq dataset</div>
+      <div class="boldauto64" style="padding-bottom: 40px; text-transform:none;">scRNA-seq Dataset</div>
       <table id="distro_data" class="table table-striped">
         <thead>
           <tr>
