--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -21,7 +21,7 @@
 <div class="section03" style="padding-left: 120px; padding-right: 120px;">
     <div id="searchPage" class="container" style="padding: 0px;">
         <div class="row justify-content-start">
-            <div class="boldauto36" style="padding-bottom: 30px;">Explore scRNA-seq Data</div>
+            <div class="boldauto36" style="padding-bottom: 30px; text-transform:none;">Explore scRNA-seq Data</div>
         </div>
         <div class="row" id="globalsearch">
             <input style="width: 50%; height: 48px; display:inline-block" class="form-control" id="customSearchBox"
