--- a/flaskstarter/templates/tasks/show_search_plot.html
+++ b/flaskstarter/templates/tasks/show_search_plot.html
@@ -28,12 +28,23 @@
     <div class="row justify-content-center" style="padding-top: 30px">
       <div id="chart3" class="chart"></div>
     </div>
-
+    <div class="row justify-content-center" style="padding-top: 100px">
+      <div class="boldauto36">Gender Proportion</div>
+    </div>
+    <div class="row justify-content-center" style="padding-top: 30px">
+      <div id="chart6" class="chart"></div>
+    </div>
+    <div class="row justify-content-center" style="padding-top: 100px">
+      <div class="boldauto36">Age Proportion</div>
+    </div>
+    <div class="row justify-content-center" style="padding-top: 30px">
+      <div id="chart4" class="chart"></div>
+    </div>
     <div class="row justify-content-center" style="padding-top: 100px">
       <div class="boldauto36">Symptoms Proportion</div>
     </div>
     <div class="row justify-content-center" style="padding-top: 30px">
-      <div id="chart4" class="chart"></div>
+      <div id="chart5" class="chart"></div>
     </div>
   </div>
 </div>
@@ -68,6 +79,19 @@
   var graphs = {{ graphJSON4 | safe }};
 
   Plotly.plot('chart4', graphs, {});
+
+</script>
+<script type="text/javascript">
+  var graphs = {{ graphJSON5 | safe }};
+
+  Plotly.plot('chart5', graphs, {});
+
+</script>
+
+<script type="text/javascript">
+  var graphs = {{ graphJSON6 | safe }};
+
+  Plotly.plot('chart6', graphs, {});
 
 </script>
 
