--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -89,7 +89,7 @@
 <div class="section01">
 
   <div class="container flex-column">
-    <div class="intro-h">What is Covidscope?</div>
+    <div class="regularS22">What is Covidscope?</div>
     <div class="intro-c">
       Covidscope stores and provides over 4.9 million
       single-cell data by 21 published single-cell sequencing datasets. Anyone
@@ -131,7 +131,7 @@
 
 <div class="section02" hidden>
   <div class="container flex-column">
-    <div class="intro-h">D²4H Single-cell Data Share Life Cycle</div>
+    <div class="regularS22">D²4H Single-cell Data Share Life Cycle</div>
     <div class="intro-c">
       The D²4H Single-cell Data Share provides a platform for sharing
       single-cell data. We welcome anyone to contribute on our data sharing
