--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -82,6 +82,19 @@ a {
     vertical-align: middle;
 }
 
+.regularS22 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 36px;
+    text-align: center;
+    letter-spacing: 0.24em;
+    text-transform: uppercase;
+    color: #757779;
+    margin-bottom: 30px;
+}
+
 .mediumauto18 {
     font-family: 'Inter';
     font-style: normal;
@@ -189,8 +202,9 @@ a {
 .navbar-nav .nav-item .nav-link {
     font-family: 'Inter';
     font-style: normal;
-    font-size: 20px;
     font-weight: 700;
+    font-size: 22px;
+    line-height: 24px;
     color: #066453;
     padding: 12px;
 }
